change my homepage

--- a/index.html
+++ b/index.html
@@ -294,18 +294,20 @@
       </div>
   
       <div class="col-12 col-lg-8">
-        <div class="col-12 col-lg-2">
-          <img src="projects/errCorrect/img/page.png" width="96px" height="96px"></img>
-        </div>
+        <div class="row">
+          <div class="col-12 col-lg-2">
+            <img src="projects/errCorrect/img/page.png" width="96px" height="96px"></img>
+          </div>
 
-        <div class="col-12 col-lg-6">
-          <div class="pub-list-item" style="margin-bottom: 1rem">
-            <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-            <span class="author_list"><strong></strong>Hongru WANG</strong>, Li Mee</span>
-            (2019).
-            <a>A Game about Error Correction for Cantonese</a>.
-            <a>Using js-cookie, javascript, bootstracp</a>
-            <a href="/projects/errCorrect/start.html">DEMO</a>
+          <div class="col-12 col-lg-6">
+            <div class="pub-list-item" style="margin-bottom: 1rem">
+              <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+              <span class="author_list"><strong></strong>Hongru WANG</strong>, Li Mee</span>
+              (2019).
+              <a>A Game about Error Correction for Cantonese</a>.
+              <a>Using js-cookie, javascript, bootstracp</a>
+              <a href="/projects/errCorrect/start.html">DEMO</a>
+            </div>
           </div>
         </div>
 
