change my homepage

--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@
   
       <div class="col-12 col-lg-8">
         <div class="row">
-          <div class="col-12 col-lg-2">
-            <img src="projects/errCorrect/img/page.png" width="96px" height="96px"></img>
+          <div class="col-12 col-lg-4">
+            <img src="projects/errCorrect/img/page.png" width="100%" height="100%"></img>
           </div>
 
-          <div class="col-12 col-lg-6">
+          <div class="col-12 col-lg-8">
             <div class="pub-list-item" style="margin-bottom: 1rem">
               <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
               <span class="author_list"><strong></strong>Hongru WANG</strong>, Li Mee</span>
