change my homepage

--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
       </div>
   
       <div class="col-12 col-lg-8">
-        <a>Kuaishou, Recommend System Intern</a>
-        <a>360 Finance, Data Analysis Intern</a>
+        <p>Kuaishou, Recommend System Intern</p>
+        <p>360 Finance, Data Analysis Intern</p>
       </div>
     </div>
 
