change help info

--- a/index.html
+++ b/index.html
@@ -292,6 +292,47 @@
       <div class="col-12 col-lg-4 section-heading">
         <h1>Projects</h1>
       </div>
+
+      <div class="col-12 col-lg-8">
+        <div class="row">
+          <div class="col-12 col-lg-4">
+            <img src="projects/dialogue_collection/dialogue.png" width="100%" height="100%"></img>
+          </div>
+
+          <div class="col-12 col-lg-8">
+            <div class="pub-list-item" style="margin-bottom: 1rem">
+              <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+              <span class="author_list"><strong></strong>Hongru WANG</strong></span>
+              (2020).
+              <a>Dialogue Collection Platform for Restaurant in HK</a>.
+              <a>We build the website to mimic the coversation between consumer and restaurant and collect the data to build task-oriented dialogue system.</a>
+              <a href="http://ihackers.club/">Website</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="col-12 col-lg-8">
+        <div class="row">
+          <div class="col-12 col-lg-4">
+            <img src="projects/smp/SMP.png" width="100%" height="100%"></img>
+          </div>
+
+          <div class="col-12 col-lg-8">
+            <div class="pub-list-item" style="margin-bottom: 1rem">
+              <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+              <span class="author_list"><strong></strong>Hongru WANG</strong>, Gabreil, Changjian Liu</span>
+              (2020).
+              <a>SMP 2020 ECDT Few-shot Spoken Language Understanding</a>.
+              <a>We use ERNIE, ERNIE+CRF, ERNIE+BiLSTM+CRF to solve this problem, and different trick like mask strategy. We get Top 3 at the leaderboard.</a>
+              <a href="https://adamszq.github.io/smp2020ecdt_task1/">Leaderboard</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
   
       <div class="col-12 col-lg-8">
         <div class="row">
