--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
           <div class="col-12 col-lg-8">
             <div class="pub-list-item" style="margin-bottom: 1rem">
               <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-              <span class="author_list"><strong></strong>Hongru WANG</strong></span>
+              <span class="author_list"><strong></strong>Hongru WANG</strong>, Gabriel, Kam-Fai Wong</span>
               (2020).
               <a>Dialogue Collection Platform for Restaurant in HK</a>.
               <a>We build the website to mimic the coversation between consumer and restaurant and collect the data to build task-oriented dialogue system.</a>
@@ -322,7 +322,7 @@
           <div class="col-12 col-lg-8">
             <div class="pub-list-item" style="margin-bottom: 1rem">
               <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-              <span class="author_list"><strong></strong>Hongru WANG</strong>, Gabreil, Changjian Liu</span>
+              <span class="author_list"><strong></strong>Hongru WANG</strong>, Gabreil, Changjian Liu, Kam-Fai Wong</span>
               (2020).
               <a>SMP 2020 ECDT Few-shot Spoken Language Understanding</a>.
               <a>We use ERNIE, ERNIE+CRF, ERNIE+BiLSTM+CRF to solve this problem, and different trick like mask strategy. We get Top 3 at the leaderboard.</a>
@@ -332,7 +332,7 @@
         </div>
 
         <br><br>
-        
+
         <div class="row">
           <div class="col-12 col-lg-4">
             <img src="projects/errCorrect/img/page.png" width="100%" height="100%"></img>
