--- a/index.html
+++ b/index.html
@@ -185,9 +185,8 @@
       
       <h1>Biography</h1>
 
-      <p>I am currently a Research Assistant at The Chines University of Hong Kong, supervised by 
-      <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a>. 
-      My research interests include spoken/natural language understanding, task-oriented dialogue systems, commonse sense knowledge. Feel free to contact me for interdisciplinary research.
+      <p>Mr. Hongru WANG is currently a Research Assistant at The Chines University of Hong Kong, supervised by 
+      <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a>. He obstained his Bachelor degree from Communication University of China in 2019 and his research interests include spoken/natural language understanding, task-oriented dialogue systems, commonse sense knowledge. Feel free to contact me for interdisciplinary research.
       </p>
 
 
