--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <h1>Biography</h1>
 
       <p>Mr. Hongru WANG is currently a Research Assistant at The Chines University of Hong Kong, supervised by 
-      <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a>. He obstained his Bachelor degree from Communication University of China in 2019 and his research interests include spoken/natural language understanding, task-oriented dialogue systems, commonse sense knowledge. Feel free to contact me for interdisciplinary research.
+      <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a>. He obstained his Bachelor degree from Communication University of China in 2019 and his research interests include spoken/natural language understanding, task-oriented dialogue systems, commonse sense knowledge. Feel free to contact him for interdisciplinary research.
       </p>
 
 
@@ -363,6 +363,9 @@
       </div>
   
       <div class="col-12 col-lg-8">
+        <p>Top3 at <a href="https://adamszq.github.io/smp2020ecdt_task1/">SMP ECDT-2020</a></p>
+        <p>Top3 at <a href="https://competitions.codalab.org/competitions/29703#results">Track 1 ICLR 2020 Medical Dialogue Response Generation</a></p>
+        <p>Top10 at <a href="https://competitions.codalab.org/competitions/21080#results">Common Sense Explanation and Validation SemEval 2020</a></p>
         <p>Kuaishou, Recommend System Intern</p>
         <p>360 Finance, Data Analysis Intern</p>
       </div>
