--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <h1>Biography</h1>
 
       <p>Mr. Hongru WANG is currently a Research Assistant at The Chines University of Hong Kong, supervised by 
-      <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a>. He obstained his Bachelor degree from Communication University of China in 2019 and his research interests include spoken/natural language understanding, task-oriented dialogue systems, commonse sense knowledge. Feel free to contact him for interdisciplinary research.
+      <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a>. He obtained his Bachelor degree from Communication University of China in 2019 and his research interests include meta dialogue system, controllable natural language generation, commonse sense knowledge. Feel free to contact him for interdisciplinary research.
       </p>
 
 
@@ -366,6 +366,7 @@
         <p>Top3 at <a href="https://adamszq.github.io/smp2020ecdt_task1/">SMP ECDT-2020</a></p>
         <p>Top3 at <a href="https://competitions.codalab.org/competitions/30755#results">Track 1 ICLR 2021 Medical Dialogue Response Generation</a></p>
         <p>Top10 at <a href="https://competitions.codalab.org/competitions/21080#results">Common Sense Explanation and Validation SemEval 2020</a></p>
+        <p>A software copyright of ”WeCampus WeChat mini-program”(2018SR562540)</p>
         <p>Kuaishou, Recommend System Intern</p>
         <p>360 Finance, Data Analysis Intern</p>
       </div>
