--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
   </div>
 </section>
 
-<section id="Experience" class="home-section wg-pages">
+<section id="News" class="home-section wg-pages">
   <div class="container">
     <div class="row"> 
       <div class="col-12 col-lg-4 section-heading">
@@ -254,7 +254,23 @@
       <div class="col-12 col-lg-8">
         <p>Top3 at <a href="https://adamszq.github.io/smp2020ecdt_task1/">SMP ECDT-2020</a></p>
         <p>Top3 at <a href="https://competitions.codalab.org/competitions/30755#results">Track 1 ICLR 2021 Medical Dialogue Response Generation</a></p>
-        <p>Top10 at <a href="https://competitions.codalab.org/competitions/21080#results">Common Sense Explanation and Validation SemEval 2020</a></p>
+        <p>May 2020</p>  <p><p style="color:red">[NEW]</p> Top10 at <a href="https://competitions.codalab.org/competitions/21080#results">Common Sense Explanation and Validation SemEval 2020</a></p>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+
+<section id="Experience" class="home-section wg-pages">
+  <div class="container">
+    <div class="row"> 
+      <div class="col-12 col-lg-4 section-heading">
+        <h1>Experience</h1>
+        <p>Intern, Valunteer</p>
+      </div>
+  
+      <div class="col-12 col-lg-8">
         <p>A software copyright of ”WeCampus WeChat mini-program”(2018SR562540)</p>
         <p>Kuaishou, Recommend System Intern</p>
         <p>360 Finance, Data Analysis Intern</p>
