--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       <div class="col-12 col-lg-8">
         <p>Top3 at <a href="https://adamszq.github.io/smp2020ecdt_task1/">SMP ECDT-2020</a></p>
         <p>Top3 at <a href="https://competitions.codalab.org/competitions/30755#results">Track 1 ICLR 2021 Medical Dialogue Response Generation</a></p>
-        <p>May 2020</p>  <p><p style="color:red">[NEW]</p> Top10 at <a href="https://competitions.codalab.org/competitions/21080#results">Common Sense Explanation and Validation SemEval 2020</a></p>
+        <p>May 2020 <span style="color:red">[NEW]</span> Top10 at <a href="https://competitions.codalab.org/competitions/21080#results">Common Sense Explanation and Validation SemEval 2020</a></p>
       </div>
     </div>
 
