--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
   <div class="container">
     <div class="row"> 
       <div class="col-12 col-lg-4 section-heading">
-        <h1>Experience</h1>
-        <p>Intern, Valunteer</p>
+        <h1>News</h1>
+        <p>Competition, Conference</p>
       </div>
   
       <div class="col-12 col-lg-8">
@@ -267,14 +267,15 @@
     <div class="row"> 
       <div class="col-12 col-lg-4 section-heading">
         <h1>Experience</h1>
-        <p>Intern, Valunteer</p>
+        <p>Intern, Volunteer</p>
       </div>
   
       <div class="col-12 col-lg-8">
-        <p>Mar 2020 - Jul 2021    MoE Key Lab of High Conﬁdence Software Technologies, Research Assistant</p>
-        <p>Apr 2019 - Jul 2019    Kuaishou, Recommend System Intern</p>
-        <p>Aug 2018 - Sep 2018    360 Finance, Data Analysis Intern</p>
-        <p>A software copyright of ”WeCampus WeChat mini-program”(2018SR562540)</p>
+          <p>Research Assistant, MoE Key Lab of High Conﬁdence Software Technologies, Mar 2020 - Jul 2021</p>
+          <p>Recommend System Intern, Kuaishou, Apr 2019 - Jul 2019</p>
+          <p>Data Analysis Intern, 360 Finance, Aug 2018 - Sep 2018</p>
+
+          <p>A software copyright of ”WeCampus WeChat mini-program”(2018SR562540)</p>
       </div>
     </div>
 
@@ -423,7 +424,7 @@
       
       <li>
         <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
-        <span id="person-email"><a href="mailto:hrwang[at]se.cuhk.edu.hk">hrwang@se.cuhk.edu.hk, hrwang@cse.cuhk.edu.hk</a></span>
+        <span id="person-email"><a href="mailto:hrwang[at]se.cuhk.edu.hk">hrwang@se.cuhk.edu.hk</a></span>
       </li>
       
       <li>
