--- a/index.html
+++ b/index.html
@@ -310,12 +310,8 @@
           (2020).
           <a href="https://arxiv.org/abs/2006.09161">CUHK at SemEval-2020 Task 4: CommonSense Explanation, Reasoning and Prediction with Multi-task Learning</a>.
           International Workshop on Semantic Evaluation, SemEval-2020
-          
-          <p>
-            <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2006.09161" target="_blank" rel="noopener">
-              Preprint
-            </a>
-          </p>
+
+
         </div>
 
 
@@ -417,7 +413,7 @@
             <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2011.08772" target="_blank" rel="noopener">
               Preprint
             </a>
-            <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/KddRES" target="_blank" rel="noopener">
+            <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/KddRES" target="_blank" rel="noopener">
               Code
             </a>
           </p>
