--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
       </div>
   
       <div class="col-12 col-lg-8">
-          <p>Research Assistant, MoE Key Lab of High Conﬁdence Software Technologies, Mar 2020 - Jul 2021</p>
-          <p>Recommend System Intern, Kuaishou, Apr 2019 - Jul 2019</p>
-          <p>Data Analysis Intern, 360 Finance, Aug 2018 - Sep 2018</p>
+          <p>2020/03-Presnet, Research Assistant, MoE Key Lab of High Conﬁdence Software Technologies, Dialogue System, Few Shot Learning</p>
+          <p>2019/04-2019/07, Recommend System Intern, Kuaishou, Music and Video Recommendation</p>
+          <p>2018/07-2018/10, Data Analysis Intern, 360 Finance, Data Analysis, Weekly and Monthly Report</p>
 
           <p>A software copyright of ”WeCampus WeChat mini-program”(2018SR562540)</p>
       </div>
