--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       </div>
   
       <div class="col-12 col-lg-8">
-          <p>2020/03-Presnet, Research Assistant, MoE Key Lab of High Conﬁdence Software Technologies, Dialogue System, Few Shot Learning</p>
+          <p>2020/03-Present, Research Assistant, MoE Key Lab of High Conﬁdence Software Technologies, Dialogue System, Few Shot Learning</p>
           <p>2019/04-2019/07, Recommend System Intern, Kuaishou, Music and Video Recommendation</p>
           <p>2018/07-2018/10, Data Analysis Intern, 360 Finance, Data Analysis, Weekly and Monthly Report</p>
 
