--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
   
       <div class="col-12 col-lg-8">
         <p>May 2021 <span style="color:red">[NEW]</span> Two Papers are rejected by EMNLP 2021</p>
-        <p>May 2021 <span style="color:red">[NEW]</span> One Paper is rejected by ACL 2021</p>
+        <p>May 2021 <span style="color:red">[NEW]</span> One Paper is rejected by ACL 2021, and then CIKM 2021</p>
         <p>Apr 2021 <span style="color:red">[NEW]</span> Top10 at <a href="https://competitions.codalab.org/competitions/29703#results">Track 1 ICLR 2021 Medical Dialogue Response Generation</a></p>
         <p>Aug 2020 <span style="color:red">[NEW]</span> Top3 at <a href="https://adamszq.github.io/smp2020ecdt_task1/">SMP ECDT-2020</a></p>
         <p>Apr 2020 <span style="color:red">[NEW]</span> Top10 at <a href="https://competitions.codalab.org/competitions/21080#results">Common Sense Explanation and Validation SemEval 2020</a></p>
