add emnlp 2021 news

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <img class="avatar avatar-circle" src="/author/hongru-wang/profile.jpeg" alt="Hongru WANG">
           <div class="portrait-title">
             <h2>Hongru WANG</h2>
-            <h3>MSc student and RA in Computer Science and Technology</h3>
+            <h3>Ph.D. in Computer Science and Technology</h3>
             <h3>
               <span>The Chinese University of Hong Kong</span>
             </h3>
@@ -177,7 +177,7 @@
       <h1>Biography</h1>
 
       <p>Mr. Hongru WANG is currently a Ph.D. Student at The Chines University of Hong Kong, supervised by 
-      <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a> from The Chinese University of Hong Kong and <a href="https://lia.epfl.ch/~mi/">Dr. Mi</a> from Huawei Noah'ark Lab. He obtained his Bachelor degree from Communication University of China in 2019 and his research interests include meta dialogue system, controllable natural language generation, commonse sense knowledge. Feel free to contact him for interdisciplinary research.
+      <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a> from The Chinese University of Hong Kong and <a href="https://lia.epfl.ch/~mi/">Dr. Mi Fei</a> from Huawei Noah'ark Lab. He obtained his Bachelor degree from Communication University of China in 2019 and his research interests include meta dialogue system, controllable natural language generation, commonse sense knowledge. Feel free to contact him for interdisciplinary research.
       </p>
 
 
