--- a/index.html
+++ b/index.html
@@ -243,6 +243,8 @@
       </div>
   
       <div class="col-12 col-lg-8">
+        <p>Jan 2022 <span style="color:red">[NEW]</span> One papers is accepted by ICASSP 2022</p> 
+        <p>Dec 2021 <span style="color:red">[NEW]</span> Two Papers are rejected by AAAI 2021 Phase-1 and Two papers are rejected by AAAI 2021 Phase-2</p>
         <p>Aug 2021 <span style="color:red">[NEW]</span> Two Papers are rejected by EMNLP 2021</p>
         <p>May 2021 <span style="color:red">[NEW]</span> One Paper is rejected by ACL 2021, and then CIKM 2021</p>
         <p>Apr 2021 <span style="color:red">[NEW]</span> Top10 at <a href="https://competitions.codalab.org/competitions/29703#results">Track 1 ICLR 2021 Medical Dialogue Response Generation</a></p>
@@ -418,6 +420,26 @@
 
   </div>
 </section>
+
+
+<section id="TA" class="home-section wg-pages">
+  <div class="container">
+    <div class="row"> 
+      <div class="col-12 col-lg-4 section-heading">
+        <h1>TA</h1>
+        <p>Teaching Assistant, Student Helper</p>
+      </div>
+  
+      <div class="col-12 col-lg-8">
+          <p>SEEM 3450 Engineering Innovation and Entrepreneurship</p>
+          <p>SEEM 3490 Information Systems Management</p>
+          <p>SEEM 5730 / ECLT 5910 Information Technology Management</p>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
 <section id="contact" class="home-section wg-contact   "  >
   <div class="container">
