--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
   
       <div class="col-12 col-lg-8">
 
-        <ul class="fa-ul">
-          <li>Oct 2022 </span> One paper is accepted by Finds of EMNLP 2022.</li>
-          <li>Nov 2022 </span> Two papers are accepted by <em>ICNLSP 2020</em>.</li>
+        <ul>
+          <li data-emoji="🤪">Oct 2022 </span> One paper is accepted by Finds of EMNLP 2022.</li>
+          <li data-emoji="🤠">Nov 2022 </span> Two papers are accepted by <em>ICNLSP 2022</em>.</li>
           <li>Jun 2022 </span> One paper is accepted by <em>Machine Intelligence Research.</em>.</li>
           <li>Feb 2022 </span> One paper is accepted by <em>ICASSP 2022</em>.</li>
           <li>Apr 2021 </span> Top10 at <a href="https://competitions.codalab.org/competitions/29703#results">Track 1 ICLR 2021 Medical Dialogue Response Generation</a></li>
@@ -273,7 +273,6 @@
   </div>
 </section>
 
-
 <section id="publications" class="home-section wg-pages">
   <div class="container">     
     <div class="row">
@@ -295,21 +294,23 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          
           <span class="author_list">Zhiming Mao, Jian Li, <strong>Hongru WANG$^\ddagger$</strong>, Xingshan Zeng, Kam-Fai Wong </span> (2022).
           <a href="https://arxiv.org/abs/2210.05196">DIGAT: Modeling News Recommendation with Dual-Graph Interaction</a>.
           Findings, EMNLP-2022
 
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list"><strong>Hongru WANG$^\ddagger$</strong>, Huimin Wang, Zezhong Wang, Kam-Fai Wong</span>
           (2022).
           <a href="https://arxiv.org/abs/2111.01398.pdf">Integrating Pretrained Language Model for Dialogue Policy Learning</a>.
           ICASSP-2022
 
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list"><strong>Hongru WANG$^\ddagger$</strong>, Huimin Wang, Zezhong Wang, Kam-Fai Wong</span>
           (2022).
           <a href="https://arxiv.org/abs/2202.13675.pdf">A Survey on Recent Advances and Challenges in Reinforcement Learning Methods for Task-Oriented Dialogue Policy Learning</a>.
           Machine Intelligence Research.
 
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list"><strong>Hongru WANG$^\ddagger$</strong>, Xiangru Tang, Sunny Lai, Kwong Sak Leung, Jia Zhu, Gabriel, and Kam-Fai WONG</span>
           (2020).
           <a href="https://arxiv.org/abs/2006.09161">CUHK at SemEval-2020 Task 4: CommonSense Explanation, Reasoning and Prediction with Multi-task Learning</a>.
