add tools and update

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
       <div class="col-12 col-lg-8">
 
         <ul>
-          <li data-emoji="🤪">Oct 2022 </span> One paper is accepted by Finds of EMNLP 2022.</li>
+          <li data-emoji="🤪">Oct 2022 </span> One paper is accepted by <em>Finds of EMNLP 2022.</em></li>
           <li data-emoji="🤠">Nov 2022 </span> Two papers are accepted by <em>ICNLSP 2022</em>.</li>
           <li>Jun 2022 </span> One paper is accepted by <em>Machine Intelligence Research.</em>.</li>
           <li>Feb 2022 </span> One paper is accepted by <em>ICASSP 2022</em>.</li>
@@ -277,7 +277,7 @@
   <div class="container">     
     <div class="row">
       <div class="col-12 col-lg-4 section-heading">
-        <h1>Publications</h1>
+        <h1>Selected Publications</h1>
         <p>Journal and conference</p>
       </div>
       
@@ -297,28 +297,31 @@
           <span class="author_list">Zhiming Mao, Jian Li, <strong>Hongru WANG$^\ddagger$</strong>, Xingshan Zeng, Kam-Fai Wong </span> (2022).
           <a href="https://arxiv.org/abs/2210.05196">DIGAT: Modeling News Recommendation with Dual-Graph Interaction</a>.
           Findings, EMNLP-2022
+        </div>
 
+        <div class="pub-list-item" style="margin-bottom: 1rem"></div>
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list"><strong>Hongru WANG$^\ddagger$</strong>, Huimin Wang, Zezhong Wang, Kam-Fai Wong</span>
           (2022).
           <a href="https://arxiv.org/abs/2111.01398.pdf">Integrating Pretrained Language Model for Dialogue Policy Learning</a>.
           ICASSP-2022
+        </div>
 
+        <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list"><strong>Hongru WANG$^\ddagger$</strong>, Huimin Wang, Zezhong Wang, Kam-Fai Wong</span>
           (2022).
           <a href="https://arxiv.org/abs/2202.13675.pdf">A Survey on Recent Advances and Challenges in Reinforcement Learning Methods for Task-Oriented Dialogue Policy Learning</a>.
           Machine Intelligence Research.
+        </div>
 
+        <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list"><strong>Hongru WANG$^\ddagger$</strong>, Xiangru Tang, Sunny Lai, Kwong Sak Leung, Jia Zhu, Gabriel, and Kam-Fai WONG</span>
           (2020).
           <a href="https://arxiv.org/abs/2006.09161">CUHK at SemEval-2020 Task 4: CommonSense Explanation, Reasoning and Prediction with Multi-task Learning</a>.
           International Workshop on Semantic Evaluation, SemEval-2020
-
         </div>
-
-
       </div>
     </div>
   </div>
@@ -478,7 +481,13 @@
     <div class="row"> 
       <div class="col-12 col-lg-4 section-heading">
         <h1>Tools</h1>
-        <p>Teaching Assistant, Student Helper</p>
+        <p>Open Source Tools, just for fun</p>
+      </div>
+
+      <div class="col-12 col-lg-8">
+        <ul>
+          <li>love for girlfriend: </li>
+        </ul>
       </div>
   
     </div>
