--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
           Findings, EMNLP-2022
         </div>
 
-        <div class="pub-list-item" style="margin-bottom: 1rem"></div>
+        <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list"><strong>Hongru WANG$^\ddagger$</strong>, Huimin Wang, Zezhong Wang, Kam-Fai Wong</span>
           (2022).
@@ -309,10 +309,10 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <span class="author_list"><strong>Hongru WANG$^\ddagger$</strong>, Huimin Wang, Zezhong Wang, Kam-Fai Wong</span>
+          <span class="author_list">Wai-Chung Kwan, <strong>Hongru WANG$^\ddagger$</strong>, Huimin Wang, Kam-Fai Wong</span>
           (2022).
           <a href="https://arxiv.org/abs/2202.13675.pdf">A Survey on Recent Advances and Challenges in Reinforcement Learning Methods for Task-Oriented Dialogue Policy Learning</a>.
-          Machine Intelligence Research.
+          Equal Contribution, Machine Intelligence Research.
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -322,6 +322,7 @@
           <a href="https://arxiv.org/abs/2006.09161">CUHK at SemEval-2020 Task 4: CommonSense Explanation, Reasoning and Prediction with Multi-task Learning</a>.
           International Workshop on Semantic Evaluation, SemEval-2020
         </div>
+
       </div>
     </div>
   </div>
