add tools and updated

--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
       <div class="col-12 col-lg-8">
 
         <ul>
-          <li>Oct 2022 </span> One paper is accepted by <em>Finds of EMNLP 2022.</em> <p>&#128525;</p></li>
-          <li>Nov 2022 </span> Two papers are accepted by <em>ICNLSP 2022</em>.</li>
+          <li>Oct 2022 </span> One paper is accepted by <em>Finds of EMNLP 2022.</em> &#128525;</li>
+          <li>Nov 2022 </span> Two papers are accepted by <em>ICNLSP 2022</em>. &#128074;&#127995;</li>
           <li>Jun 2022 </span> One paper is accepted by <em>Machine Intelligence Research.</em></li>
-          <li>Feb 2022 </span> One paper is accepted by <em>ICASSP 2022</em>. <p>&#128516;</p></li>
+          <li>Feb 2022 </span> One paper is accepted by <em>ICASSP 2022</em>. &#128516; </li>
           <li>Apr 2021 </span> Top10 at <a href="https://competitions.codalab.org/competitions/29703#results"><em>Track 1 ICLR 2021 Medical Dialogue Response Generation</em></a></li>
           <li>Aug 2020 </span> Top3 at <a href="https://adamszq.github.io/smp2020ecdt_task1/"><em>SMP ECDT-2020</em></a></li>
           <li>Apr 2020 </span> Top10 at <a href="https://competitions.codalab.org/competitions/21080#results"><em>Common Sense Explanation and Validation SemEval 2020</em></a></li>
