--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
       <div class="col-12 col-lg-8">
 
         <ul>
+          <li>May 2023 </span> Two paper are accepted by <em>ACL 2023.</em> &#128525;</li>
           <li>Oct 2022 </span> One paper is accepted by <em>Finds of EMNLP 2022.</em> &#128525;</li>
           <li>Nov 2022 </span> Two papers are accepted by <em>ICNLSP 2022</em>. &#128074;&#127995;</li>
           <li>Jun 2022 </span> One paper is accepted by <em>Machine Intelligence Research.</em></li>
