--- a/index.html
+++ b/index.html
@@ -295,17 +295,17 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <span class="author_list">Zhiming Mao, Jian Li, <strong>Hongru WANG$^\ddagger$</strong>, Xingshan Zeng, Kam-Fai Wong </span> (2022).
+          <span class="author_list">Zhiming Mao, Jian Li, <strong>Hongru WANG</strong>, Xingshan Zeng, Kam-Fai Wong </span> (2022).
           <a href="https://arxiv.org/abs/2210.05196">DIGAT: Modeling News Recommendation with Dual-Graph Interaction</a>.
-          Findings, EMNLP-2022
+          Findings, <em>EMNLP-2022</em>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <span class="author_list"><strong>Hongru WANG$^\ddagger$</strong>, Huimin Wang, Zezhong Wang, Kam-Fai Wong</span>
+          <span class="author_list"><strong>Hongru WANG</strong>, Huimin Wang, Zezhong Wang, Kam-Fai Wong</span>
           (2022).
           <a href="https://arxiv.org/abs/2111.01398.pdf">Integrating Pretrained Language Model for Dialogue Policy Learning</a>.
-          ICASSP-2022
+          <em>ICASSP-2022</em>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -313,15 +313,15 @@
           <span class="author_list">Wai-Chung Kwan, <strong>Hongru WANG$^\ddagger$</strong>, Huimin Wang, Kam-Fai Wong</span>
           (2022).
           <a href="https://arxiv.org/abs/2202.13675.pdf">A Survey on Recent Advances and Challenges in Reinforcement Learning Methods for Task-Oriented Dialogue Policy Learning</a>.
-          Equal Contribution, Machine Intelligence Research.
+          Equal Contribution, <em>Machine Intelligence Research.</em>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <span class="author_list"><strong>Hongru WANG$^\ddagger$</strong>, Xiangru Tang, Sunny Lai, Kwong Sak Leung, Jia Zhu, Gabriel, and Kam-Fai WONG</span>
+          <span class="author_list"><strong>Hongru WANG</strong>, Xiangru Tang, Sunny Lai, Kwong Sak Leung, Jia Zhu, Gabriel, and Kam-Fai WONG</span>
           (2020).
           <a href="https://arxiv.org/abs/2006.09161">CUHK at SemEval-2020 Task 4: CommonSense Explanation, Reasoning and Prediction with Multi-task Learning</a>.
-          International Workshop on Semantic Evaluation, SemEval-2020
+          International Workshop on Semantic Evaluation, <em>SemEval-2020</em>
         </div>
 
       </div>
