--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
         </ul>
         
         <!--
+        <p>Jun 2022 <span style="color:red">[NEW]</span> Three Papers are rejected by ACL 2023 incuding 2 first-author papers</p>
         <p>Jun 2022 <span style="color:red">[NEW]</span> Two Papers are rejected by COLING 2022</p>
         <p>Jun 2022 <span style="color:red">[NEW]</span> One Paper is rejected by SIGDIAL 2022</p>
         <p>Dec 2021 <span style="color:red">[NEW]</span> Two Papers are rejected by AAAI 2021 Phase-1 and Two papers are rejected by AAAI 2021 Phase-2</p>
@@ -295,16 +296,15 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <span class="author_list">Zhiming Mao, Jian Li, <strong>Hongru WANG</strong>, Xingshan Zeng, Kam-Fai Wong </span> (2022).
-          <a href="https://arxiv.org/abs/2210.05196">DIGAT: Modeling News Recommendation with Dual-Graph Interaction</a>.
-          Findings, <em>EMNLP-2022</em>
+          <a href="https://arxiv.org/abs/2210.05196">DIGAT: Modeling News Recommendation with Dual-Graph Interaction</a>
+          <span class="author_list">Zhiming Mao, Jian Li, <strong>Hongru WANG</strong>, Xingshan Zeng, Kam-Fai Wong </span>
+          <p>Findings, <em>EMNLP-2022</em></p>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <a href="https://arxiv.org/abs/2111.01398.pdf">Integrating Pretrained Language Model for Dialogue Policy Learning</a>
           <span class="author_list"><strong>Hongru WANG</strong>, Huimin Wang, Zezhong Wang, Kam-Fai Wong</span>
-          (2022).
-          <a href="https://arxiv.org/abs/2111.01398.pdf">Integrating Pretrained Language Model for Dialogue Policy Learning</a>.
           <em>ICASSP-2022</em>
         </div>
 
